# austrian-german

./: .gitignore  .pre-commit-config.yaml  README.md  hooks.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-gh-pages.yml
docs/: ear-training.md  how-to.md  index.md  konjunktiv-ii.md  pages.yml  past-verb-tenses.md  present-tense.md  subjunctive-mood.md  wishlist.md
docs/stylesheets/: extra.css
