[tool.poetry]
package-mode = false
name = "austrian-german"
authors = ["Nick Vogt <vogt4nick@gmail.com>"]
license = "CC-BY-SA-4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.25"
mkdocs-macros-plugin = "^1.0.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
